updated routers
